# Shiva

./: Makefile  gresources.xml  meson.build
data/: gtk3.css  meson.build  window.gschema.xml
img/: meson.build
meson/: post_install.py
src/: Shiva.vala  ShivaInvoker.vala  meson.build
src/Communication/: NotificationManager.vala
src/Session/: AutomatizedWebView.vala  LoginManager.vala  PageAutomatizer.vala  PersistentWebView.vala  UpdateLoginsDialog.vala
src/Widgets/: HeaderBar.vala  NavigationBar.vala  PersistentWebView.vala  Window.vala  WindowContent.vala
ui/: Window.ui
