executable(
    meson.project_name(),
   'Shiva.vala',
   'Widgets/Window.vala',
   'Widgets/HeaderBar.vala',
   'Widgets/PersistentWebView.vala',
   'Session/LoginManager.vala',
   'Session/PageAutomatizer.vala',
   'Session/UpdateLoginsDialog.vala',
   'Communication/NotificationManager.vala',
    dependencies: [
        dependency('gtk+-3.0'),
        dependency('webkit2gtk-4.1'),
        dependency('libsecret-1'),
    ],
    install:true
)
